# GrammarParser

./: .gitignore  CMakeLists.txt  README.md  file_writer.cpp  file_writer.h  main.cpp  main_parser.cpp  main_parser.h  parser.cpp  parser.h  preprocess.cpp  preprocess.h  printfile.cpp  process_ahead.cpp  process_ahead.h  profuction.cpp  profuction.h  structure_define.cpp  structure_define.h  tokens_define.cpp  tokens_define.h
Test/: GrammarRightA  GrammarRightB  GrammarWrongB  GrammarWrongC  GrammarWrongD  MacroWrong  stringright
自用思维导图/: 2-1.drawio  3-1.drawio  3-2.drawio  3-3.drawio  3-4.drawio  3-5.drawio  3-6.drawio  4-2.drawio  GrammarParserTest.xmind
项目代码/: file_writer.cpp  main_parser.cpp  main_parser.h  process_ahead.h  structure_define.h  tokens_define.h
项目代码/Test/: GrammarRightA  GrammarRightB  GrammarWrongA  GrammarWrongC  GrammarWrongE  MacroRight  MacroWrong  StringWrong
